--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
     "match-sorter": "^8.0.0",
     "phosphor-react": "^1.4.1",
     "react": "^18.3.1",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.28.0",
+    "react-slick": "^0.30.2",
+    "slick-carousel": "^1.8.1",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
