Half Animated done

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "animate.css": "^4.1.1",
     "firebase": "^11.0.2",
     "keep-react": "^1.6.1",
     "localforage": "^1.10.0",
